--- a/listkd.ui
+++ b/listkd.ui
@@ -80,7 +80,12 @@
        <property name="font">
         <font>
          <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="autoScrollMargin">
         <number>16</number>
@@ -97,6 +102,9 @@
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::NoSelection</enum>
+       </property>
        <property name="iconSize">
         <size>
          <width>0</width>
@@ -106,8 +114,17 @@
        <property name="horizontalScrollMode">
         <enum>QAbstractItemView::ScrollPerPixel</enum>
        </property>
+       <property name="resizeMode">
+        <enum>QListView::Adjust</enum>
+       </property>
+       <property name="layoutMode">
+        <enum>QListView::SinglePass</enum>
+       </property>
        <property name="spacing">
         <number>3</number>
+       </property>
+       <property name="batchSize">
+        <number>100</number>
        </property>
       </widget>
      </item>
