--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1034,8 +1034,14 @@ p, li { white-space: pre-wrap; }
     <addaction name="actionEditDbPath"/>
     <addaction name="actionEditFormulas"/>
    </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>Справка</string>
+    </property>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
+   <addaction name="menu_3"/>
   </widget>
   <action name="actionMakeDoc">
    <property name="text">
@@ -1064,7 +1070,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionEditDbPath">
    <property name="text">
-    <string>Изменение пути к БД...</string>
+    <string>Сменить БД...</string>
    </property>
   </action>
  </widget>
